--- a/Untitled Notebook 2025-07-24 12_59_16.ipynb
+++ b/Untitled Notebook 2025-07-24 12_59_16.ipynb
@@ -24,7 +24,8 @@
     "# #df[df.age>28].show()\n",
     "#df.write.format(\"delta\").save(\"/FileStore/tables/delta/people\")\n",
     "\n",
-    "df.filter(df.age>28).show()"
+    "df.filter(df.age>28).show()\n",
+    "df.display()"
    ]
   }
  ],
